Planeacion de librerias y herramientas de desarrollo
Signed-off-by: Rocha0104 <mariorocha200104@gmail.com>

--- a/Bitacora/bitacora.tex
+++ b/Bitacora/bitacora.tex
@@ -76,7 +76,9 @@
 \maketitle
 
 
-\subsection{8 de febrero}
+\section{8 de febrero}
+
+\subsection{Modelo Matemático.}
 
 Se decidió representar el modelo mátematico del tablero de la siguiente forma:
 
@@ -101,5 +103,10 @@ Se decidió representar el modelo mátematico del tablero de la siguiente forma:
 \phantom{\bullet} & \phantom{\bullet} & \phantom{\bullet} & \textcolor{red}{\bullet} & \textcolor{blue}{\bullet} & \textcolor{red}{\bullet}
 \end{bmatrix}
 \]
+
+\subsection{Herramientas de Desarrollo.}
+
+Se planea usar como herramienta gráfica QT.
+Para la implementación de la matriz de menera tentativa se planea usar alguna libreria de operaciones matriciales.
 
 \end{document}
