--- a/Bitacora/bitacora.tex
+++ b/Bitacora/bitacora.tex
@@ -102,4 +102,7 @@ Se decidió representar el modelo mátematico del tablero de la siguiente forma:
 \end{bmatrix}
 \]
 
+La elección de este modelo, se debe a la facilidad que presenta para implementar operaciones matriciales y métodos de verificación de estado(win, lose).
+Además que como se observa en el diagrama, la representación en colores que se escogió para el 1 es azul mientras que el -1, es rojo
+
 \end{document}
